# ogl-renderer

./: .gitignore  LICENSE  README.md  dune-project  ogl_renderer.opam
.github/workflows/: flow.yaml
lib/: dune
lib/math/: cam.ml  dune  mat.ml  transform.ml  vec.ml  vector.ml
lib/render/: dune  mesh.ml  mesh.mli  model.ml  mymodel.ml  shader.ml  shader.mli  texture.ml  texture.mli
test/: dune
